# sarif_to_github_annotations

./: Cargo.toml  Dockerfile  README.md  action.yml  entrypoint.sh
.github/workflows/: release.yml
src/: main.rs
