[package]
name = "sarif_to_github_annotations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~3.2", features = ["derive"] }
serde = { version = "~1.0", features = ["derive"] }
serde-sarif = "~0.3"
serde_json = "~1.0"
